k8s-cluster-configuration/applications/darling-internals/base/database/service.yml
apiVersion: v1
kind: Service
metadata:
  name: darling-internals-db
  namespace: darling-internals
spec:
  selector:
    app: darling-internals-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
