k8s-cluster-configuration/applications/darling-internals/base/database/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-app-only
  namespace: darling-internals
spec:
  podSelector:
    matchLabels:
      app: darling-internals-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: darling-internals
      ports:
        - port: 5432
